修改首页问题下面的操作按钮内容，调整答案页的字体大小。 添加关于页面，以及首页的分享功能，具体分享内容尚未设置。

--- a/client/pages/main/main.wxml
+++ b/client/pages/main/main.wxml
@@ -6,10 +6,11 @@
     <view class="q_content">
     {{qInfo.qContent}}
     </view>
-    <view class="q_info">
-      <text>已读：{{qInfo.read}}</text>        
-      <text>已赞：{{qInfo.like}}</text> 
-      <text style='color: black;' bindtap='writeAns'>我要回答</text>
+    <view class="handler">
+      <text style='color: black;' bindtap='writeAns'>我要回答</text> 
+      <text style='color: black;' bindtap='writeQue'>我要提问</text>
+      <text style='color: black;' bindtap='goToBg'>背景</text>
+      <text style='color: black;' bindtap='aboutUs'>关于</text>       
     </view>
   </view>
   <view class='ans'>
