--- a/client/pages/main/main.wxss
+++ b/client/pages/main/main.wxss
@@ -15,11 +15,12 @@
   color: #888888;
   margin: 0px 0.5rem;
 }
-.q_info{
+.handler{
   font-size: 13px;
   color: #888888;
   display: flex;
-  justify-content: space-around
+  justify-content: space-around;
+  margin-top: 0.2rem;
 }
 .ans{
 	background-color: #ECECEC;
